--- a/scrumapp-jsf/src/main/webapp/index.xhtml
+++ b/scrumapp-jsf/src/main/webapp/index.xhtml
@@ -1,22 +1,13 @@
-<ui:composition template="/WEB-INF/templates/template.xhtml"
-                xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:p="http://primefaces.org/ui">
+<ui:composition
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
-        <h:form id="form">
-            <div class="row">
-                <div class="col-md-6">
-                    <p:outputLabel value="holi" />
-                </div>
-                <div class="col-md-6">
-                    <p:commandButton value="set greeting"
-
-                                     update="@form"
-                    />
-                </div>
-            </div>
-        </h:form>
-    </ui:define>
+    <h:form id="form">
+        <div class="row">
+            <h4>Welcome to Scrum App</h4>
+        </div>
+    </h:form>
 </ui:composition>
