button in login page to register

--- a/scrumapp-jsf/src/main/webapp/register.xhtml
+++ b/scrumapp-jsf/src/main/webapp/register.xhtml
@@ -15,7 +15,7 @@
                      style="text-align: -webkit-center; width: 400px;margin: 250px 250px 250px 250px; align: center;"
                      columns="1" styleClass="ui-fluid center ui-noborder">
 
-            <h2>Sign up for free</h2>
+            <h2>#{msg['register.tittle']}</h2>
 
             <p:messages id="messages" showDetail="false" closable="true">
             	<p:autoUpdate/>
