--- a/scrumapp-jsf/src/main/webapp/register.xhtml
+++ b/scrumapp-jsf/src/main/webapp/register.xhtml
@@ -1,42 +1,79 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>ScrumApp Login</title>
+	<title>ScrumApp Login</title>
+	<h:outputStylesheet library="css" name="style.css" />
+	
 </h:head>
 
 <h:body>
-    <h:form id="form" style="text-align: -webkit-center;">
+	<h:form id="form" style="text-align: -webkit-center;">
+		<p:panelGrid id="topbar" columns="3" layout="grid"
+			columnClasses="ui-grid-col-1,ui-grid-col-10,ui-grid-col-1"
+			style="border: 0px; text-align:center; border: 0px !important;">
+			<p:panelGrid />
+			<h:commandLink action="gotologin" immediate="true">
+				<p:graphicImage library="img" name="logo.png" height="100px"
+					style="margin-top: 150px;" />
+			</h:commandLink>
+			<p:panelGrid id="langs" columns="2" layout="grid"
+				style="border: 0px; text-align:center; border: 0px;">
+				<h:commandLink action="#{globalController.setSpanish}" immediate="true">
+					<p:graphicImage library="img" name="spanish.png" height="20px" />
+				</h:commandLink>
+				<h:commandLink action="#{globalController.setEnglish}" immediate="true">
+					<p:graphicImage library="img" name="english.png" height="20px" />
+				</h:commandLink>
+			</p:panelGrid>
+		</p:panelGrid>
+		<p:panelGrid layout="flex"
+			style="text-align: -webkit-center; width: 400px;margin: 70px 250px 250px 250px; align: center;"
+			columns="1" styleClass="ui-fluid center ui-noborder">
 
-        <p:panelGrid layout="flex"
-                     style="text-align: -webkit-center; width: 400px;margin: 250px 250px 250px 250px; align: center;"
-                     columns="1" styleClass="ui-fluid center ui-noborder">
+			<h2>#{msg['register.tittle']}</h2>
 
-            <h2>#{msg['register.tittle']}</h2>
+			<p:messages id="messages" showDetail="false" closable="true">
+				<p:autoUpdate />
+			</p:messages>
 
-            <p:messages id="messages" showDetail="false" closable="true">
-            	<p:autoUpdate/>
-        	</p:messages>
+			<p:inputText id="email"
+				value="#{loginController.miembroRegistro.email}"
+				placeholder="#{msg['register.email.required']}" required="true"
+				validatorMessage="#{loginController.miembroRegistro.email.invalid}"
+				label="#{msg['register.email']}">
+				<f:validateRegex
+					pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
+			</p:inputText>
+			<p:password id="password"
+				value="#{loginController.miembroRegistro.password}"
+				placeholder="#{msg['register.password.required']}" required="true"
+				label="#{msg['register.password']}" />
+			<p:password id="passwordRep" value="#{loginController.passwordRep}"
+				placeholder="#{msg['register.passwordRep.required']}"
+				required="true" label="#{msg['register.passwordRep']}" />
+			<p:inputText id="nombre"
+				value="#{loginController.miembroRegistro.nombre}"
+				placeholder="#{msg['register.nombre.required']}" required="true"
+				label="#{msg['register.nombre']}" />
+			<p:inputText id="apellidos"
+				value="#{loginController.miembroRegistro.apellidos}"
+				placeholder="#{msg['register.apellidos']}" />
+			<p:inputText id="telefono"
+				value="#{loginController.miembroRegistro.telefono}"
+				placeholder="#{msg['register.telefono']}" />
 
-            <p:inputText id="email" value="#{loginController.miembroRegistro.email}" placeholder="#{msg['register.email.required']}" required="true" 
-             validatorMessage="#{loginController.miembroRegistro.email.invalid}" label="#{msg['register.email']}">
-            <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
-            </p:inputText>
-            <p:password id="password" value="#{loginController.miembroRegistro.password}" placeholder="#{msg['register.password.required']}" required="true" label="#{msg['register.password']}"/>
-            <p:password id="passwordRep" value="#{loginController.passwordRep}" placeholder="#{msg['register.passwordRep.required']}" required="true" label="#{msg['register.passwordRep']}"/>
-            <p:inputText id="nombre"  value="#{loginController.miembroRegistro.nombre}" placeholder="#{msg['register.nombre.required']}" required="true" label="#{msg['register.nombre']}"/>
-            <p:inputText id="apellidos"  value="#{loginController.miembroRegistro.apellidos}" placeholder="#{msg['register.apellidos']}"/>
-            <p:inputText id="telefono" value="#{loginController.miembroRegistro.telefono}" placeholder="#{msg['register.telefono']}"/>
+			<p:commandButton value="#{msg['register.registerButton']}"
+				action="#{loginController.register}" update="@form" />
 
-            <p:commandButton value="#{msg['register.registerButton']}" action="#{loginController.register}" update="@form"/>
-            
-            <p:commandButton action = "gotologin" value = "#{msg['register.goToLogin']}" immediate="true"/>
-        </p:panelGrid>
-	
-    </h:form>
-    	
+			<p:commandButton action="gotologin"
+				value="#{msg['register.goToLogin']}" immediate="true" />
+		</p:panelGrid>
+
+	</h:form>
+
 </h:body>
 </html>
